# boosting-scorecards

./: .gitignore  README.md  boosted_scorecard.py  get_credit_scores.py  interpretable_boosted_scorecards.ipynb  requirements.txt
catboost-incremental/: .gitignore  README.md  pyproject.toml
catboost-incremental/app/: app.py
catboost-incremental/notebooks/: catboost-incremental.ipynb
catboost-incremental/src/: data_loader.py  generate_data.py  model_trainer.py  multiprocess.py  train.py
catboost-scorecards/: README.md  catboost_scorecard.py  cb_scorecard_constructor.ipynb  example.ipynb  pyproject.toml  utils.py
catboost-scorecards/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost-scorecards/catboost_info/learn/: events.out.tfevents
catboost-scorecards/data/: BankCaseStudyData.csv  test_data_01d9ab8b.csv
catboost-scorecards/notebooks/: catboost_scorecard.py  catboost_woe_mapper.py  cb_scorecard_constructor.ipynb  utils.py
fastwoe/: fastwoe.ipynb  fastwoe.py
gbdt-binomial-regression/: README.md  catboost_binomial.py  catboost_binomial_two_trick.py  xgboost_binomial.py
marimo-notebooks/: categorical_encoders.ipynb  categorical_encoders.py  rfgboost_classifier.ipynb  rfgboost_classifier.py
mlflow-shap/: .gitignore  README.md  main.py  pyproject.toml  test_explainer.py  ty.toml
mlflow-shap/sagemaker/: Dockerfile
mlflow-shap/sagemaker/mlflow-2.0/: buildspec.yml  requirements.txt  sagemaker_mlflow.py  train.py
mlflow-shap/sagemaker/mlflow-3.0/: Dockerfile  inference.py  requirements.txt  sagemaker_inference.py  sagemaker_mlflow.py  train.py  tune.py
mlflow-shap/sagemaker/sagemaker-pipelines-blueprints/: .gitguardian.yaml  .gitignore  .pylintrc  .secrets.baseline  README.md  config_example.py  data_preparation.py  inference.py  pipeline.py  pyproject.toml  s3_to_redshift.py  sagemaker_pipeline.ipynb  train.py
mlflow-shap/sagemaker/sagemaker-pipelines-blueprints/stubs/: README.md
mlflow-shap/sagemaker/sagemaker-pipelines-blueprints/stubs/mlflow/: __init__.pyi  py.typed
other_notebooks/: WOE_base_estimators.ipynb  WoeBoost.ipynb  auc-gini-decomposition.ipynb  balancing_risk_and_profit.ipynb  benchmarking_pd_models.ipynb  binary-and-multiclass-part-1.ipynb  binary-and-multiclass-part-2.ipynb  boosting-beyond-trees.ipynb  building_random_forest_scorecards.ipynb  cap-curve-and-recall.ipynb  catboost-incremental.ipynb  catboost_hidden_tricks.ipynb  class-imbalance-credit-scoring.ipynb  conformal-classification.ipynb  cost-sensitive-learning-scoring.ipynb  cost_sensitive_learning_colab.ipynb  data_utils_sc.py  example_focal.ipynb  example_focal_colab.ipynb  example_logistic.ipynb  example_logistic_colab.ipynb  example_multinomial.ipynb  example_multinomial_colab.ipynb  fairness-in-credit-scoring.ipynb  fastwoe-gpu.ipynb  gbdt-leaf-woe.ipynb  generative-naive-bayes.ipynb  gini-dr.ipynb  gini_instance_level.ipynb  how-scoring-works.ipynb  measuring_model_pnl.ipynb  mortgage_data_etl.ipynb  naive-bayes-pseudo-woe.ipynb  partial-dependence-plots.ipynb  pr-auc-cap.ipynb  random-forest-explainer.ipynb  random-forest-pruning.ipynb  scikit-learn-misc.ipynb  scorecard.py  shap-scoring.ipynb  (+11 more)
rfgboost/: categorical-rfgboost.ipynb  notebook.ipynb  notebook.py  random-forest-boosting.ipynb  rfgboost.py
scorecard-boosting-demo/: binning_utils.py  scorecard-boosting.ipynb  utils.py
scripts/: gini_unit_economics.py  run_kan_animation.py
xgb-scorecard-constructor/: README.md  demo-notebook.ipynb  xgb_scorecard_constructor.py  xgb_scorecard_constructor_with_splits.py
